changing index.html# to just #

--- a/uses/generate-qualified-leads/index.html
+++ b/uses/generate-qualified-leads/index.html
@@ -76,14 +76,14 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <script type="text/javascript">
   dataLayer.push({"pagePostType":"use","pagePostType2":"tax-use","pageCategory":[]});
 </script></head>
-<body class="archive tax-uses term-generate-qualified-leads term-19 header-image full-width-content"><div id="wrap"><div class="nav-bar"><div class="wrap"><div class="nav-bar-logo logo logo-white"><p><a href="../../page/13/Han_shot_first">Qzzr</a></p></div><!-- end #title-area --><ul id="menu-main_menu" class="top_menu nav nav-bar-tabs"><li id="menu-item-11" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-11"><a href="../../../tour/index.html">Tour</a></li>
-<li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-572"><a href="index.html#toggleShowUses">Uses</a>
+<body class="archive tax-uses term-generate-qualified-leads term-19 header-image full-width-content"><div id="wrap"><div class="nav-bar"><div class="wrap"><div class="nav-bar-logo logo logo-white"><p><a href="../../">Qzzr</a></p></div><!-- end #title-area --><ul id="menu-main_menu" class="top_menu nav nav-bar-tabs"><li id="menu-item-11" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-11"><a href="../../../tour/index.html">Tour</a></li>
+<li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-572"><a href="#toggleShowUses">Uses</a>
 <ul class="sub-menu">
-  <li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="index.html#">Qzzr for:</a></li>
+  <li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="#">Qzzr for:</a></li>
   <li id="menu-item-473" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-473"><a href="../publishers/index.html">Publishers</a></li>
   <li id="menu-item-474" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-474"><a href="../marketers/index.html">Marketers</a></li>
   <li id="menu-item-475" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-475"><a href="../agencies/index.html">Agencies</a></li>
-  <li id="menu-item-977" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-977"><a href="index.html#">Qzzr to:</a></li>
+  <li id="menu-item-977" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-977"><a href="#">Qzzr to:</a></li>
   <li id="menu-item-476" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-476"><a href="../drive-social-traffic/index.html">Drive social traffic</a></li>
   <li id="menu-item-477" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-477"><a href="index.html">Generate qualified leads</a></li>
   <li id="menu-item-478" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-478"><a href="../present-targeted-offers/index.html">Present targeted offers</a></li>
