--- a/our-team/index.html
+++ b/our-team/index.html
@@ -83,11 +83,11 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <body class="page page-id-657 page-template page-template-template-ourteam page-template-template-ourteam-php header-image full-width-content"><div id="wrap"><div class="nav-bar"><div class="wrap"><div class="nav-bar-logo logo logo-white"><p><a href="../">Qzzr</a></p></div><!-- end #title-area --><ul id="menu-main_menu" class="top_menu nav nav-bar-tabs"><li id="menu-item-11" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-11"><a href="../tour">Tour</a></li>
 <li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-572"><a href="index.html#toggleShowUses">Uses</a>
 <ul class="sub-menu">
-	<li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="index.html#">Qzzr for:</a></li>
+	<li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="#">Qzzr for:</a></li>
 	<li id="menu-item-473" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-473"><a href="../uses/publishers">Publishers</a></li>
 	<li id="menu-item-474" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-474"><a href="../uses/marketers">Marketers</a></li>
 	<li id="menu-item-475" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-475"><a href="../uses/agencies">Agencies</a></li>
-	<li id="menu-item-977" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-977"><a href="index.html#">Qzzr to:</a></li>
+	<li id="menu-item-977" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-977"><a href="#">Qzzr to:</a></li>
 	<li id="menu-item-476" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-476"><a href="../uses/drive-social-traffic">Drive social traffic</a></li>
 	<li id="menu-item-477" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-477"><a href="../uses/generate-qualified-leads">Generate qualified leads</a></li>
 	<li id="menu-item-478" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-478"><a href="../uses/present-targeted-offers">Present targeted offers</a></li>
