--- a/pricing/feed/index.html
+++ b/pricing/feed/index.html
@@ -7,7 +7,7 @@
 	>
 <channel>
 	<title>Comments on: Pricing</title>
-	<atom:link href="http://www.qzzr.com/pricing/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="https://www.qzzr.com/pricing/feed/" rel="self" type="application/rss+xml" />
 	<link>http://www.qzzr.com</link>
 	<description></description>
 	<lastBuildDate>Thu, 09 Jul 2015 19:49:00 +0000</lastBuildDate>
@@ -16,7 +16,7 @@
 	<generator>http://wordpress.org/?v=4.1.5</generator>
 	<item>
 		<title>By: Get Leads With the Right Online Quiz</title>
-		<link>http://www.qzzr.com/pricing/#comment-60</link>
+		<link>https://www.qzzr.com/pricing/#comment-60</link>
 		<dc:creator><![CDATA[Get Leads With the Right Online Quiz]]></dc:creator>
 		<pubDate>Tue, 26 May 2015 13:34:04 +0000</pubDate>
 		<guid isPermaLink="false">http://seosemanticxhtml.com/wordpress/qzzr/?page_id=6#comment-60</guid>
@@ -26,7 +26,7 @@
 	</item>
 	<item>
 		<title>By: How to Make a Quiz (Then Make It Rain!)</title>
-		<link>http://www.qzzr.com/pricing/#comment-48</link>
+		<link>https://www.qzzr.com/pricing/#comment-48</link>
 		<dc:creator><![CDATA[How to Make a Quiz (Then Make It Rain!)]]></dc:creator>
 		<pubDate>Tue, 12 May 2015 23:05:11 +0000</pubDate>
 		<guid isPermaLink="false">http://seosemanticxhtml.com/wordpress/qzzr/?page_id=6#comment-48</guid>
@@ -36,7 +36,7 @@
 	</item>
 	<item>
 		<title>By: Hostess Rides Relevancy Into the Sportsball Hall of Fame - Qzzr</title>
-		<link>http://www.qzzr.com/pricing/#comment-35</link>
+		<link>https://www.qzzr.com/pricing/#comment-35</link>
 		<dc:creator><![CDATA[Hostess Rides Relevancy Into the Sportsball Hall of Fame - Qzzr]]></dc:creator>
 		<pubDate>Sat, 11 Apr 2015 13:41:54 +0000</pubDate>
 		<guid isPermaLink="false">http://seosemanticxhtml.com/wordpress/qzzr/?page_id=6#comment-35</guid>
@@ -46,7 +46,7 @@
 	</item>
 	<item>
 		<title>By: How Are E-commerce Brands Using Quizzes to Drive 60% Conversion? - Qzzr</title>
-		<link>http://www.qzzr.com/pricing/#comment-34</link>
+		<link>https://www.qzzr.com/pricing/#comment-34</link>
 		<dc:creator><![CDATA[How Are E-commerce Brands Using Quizzes to Drive 60% Conversion? - Qzzr]]></dc:creator>
 		<pubDate>Wed, 08 Apr 2015 20:22:09 +0000</pubDate>
 		<guid isPermaLink="false">http://seosemanticxhtml.com/wordpress/qzzr/?page_id=6#comment-34</guid>
@@ -56,7 +56,7 @@
 	</item>
 	<item>
 		<title>By: How Are E-commerce Brands Using Quizzes to Drive 60% Conversion? - Qzzr</title>
-		<link>http://www.qzzr.com/pricing/#comment-31</link>
+		<link>https://www.qzzr.com/pricing/#comment-31</link>
 		<dc:creator><![CDATA[How Are E-commerce Brands Using Quizzes to Drive 60% Conversion? - Qzzr]]></dc:creator>
 		<pubDate>Wed, 08 Apr 2015 19:54:41 +0000</pubDate>
 		<guid isPermaLink="false">http://seosemanticxhtml.com/wordpress/qzzr/?page_id=6#comment-31</guid>
@@ -66,7 +66,7 @@
 	</item>
 	<item>
 		<title>By: Graded or Outcome? Tap Into the Psychology of Quiz Types - Qzzr</title>
-		<link>http://www.qzzr.com/pricing/#comment-27</link>
+		<link>https://www.qzzr.com/pricing/#comment-27</link>
 		<dc:creator><![CDATA[Graded or Outcome? Tap Into the Psychology of Quiz Types - Qzzr]]></dc:creator>
 		<pubDate>Thu, 02 Apr 2015 20:31:57 +0000</pubDate>
 		<guid isPermaLink="false">http://seosemanticxhtml.com/wordpress/qzzr/?page_id=6#comment-27</guid>
@@ -76,7 +76,7 @@
 	</item>
 	<item>
 		<title>By: Six ways to add interactivity to your blog freely and easily P1 &#124; Journalistic Blogger</title>
-		<link>http://www.qzzr.com/pricing/#comment-25</link>
+		<link>https://www.qzzr.com/pricing/#comment-25</link>
 		<dc:creator><![CDATA[Six ways to add interactivity to your blog freely and easily P1 &#124; Journalistic Blogger]]></dc:creator>
 		<pubDate>Tue, 17 Mar 2015 19:28:56 +0000</pubDate>
 		<guid isPermaLink="false">http://seosemanticxhtml.com/wordpress/qzzr/?page_id=6#comment-25</guid>
