--- a/stories/publishers/feed/index.html
+++ b/stories/publishers/feed/index.html
@@ -7,7 +7,7 @@
 	>
 <channel>
 	<title>Comments on: Publishers</title>
-	<atom:link href="http://www.qzzr.com/stories/publishers/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="https://www.qzzr.com/stories/publishers/feed/" rel="self" type="application/rss+xml" />
 	<link>http://www.qzzr.com</link>
 	<description></description>
 	<lastBuildDate>Thu, 09 Jul 2015 19:49:00 +0000</lastBuildDate>
