--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -7,7 +7,7 @@
 	>
 <channel>
 	<title>Comments for Qzzr</title>
-	<atom:link href="http://www.qzzr.com/comments/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="https://www.qzzr.com/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://www.qzzr.com</link>
 	<description></description>
 	<lastBuildDate>Thu, 09 Jul 2015 19:49:00 +0000</lastBuildDate>
@@ -16,10 +16,10 @@
 	<generator>http://wordpress.org/?v=4.1.5</generator>
 	<item>
 		<title>Comment on The Top 10 Best Websites to Find Copyright-Free Images by Igor Ovsyannykov</title>
-		<link>http://www.qzzr.com/blog/top-10-best-websites-copyright-free-images/#comment-91</link>
+		<link>https://www.qzzr.com/blog/top-10-best-websites-copyright-free-images/#comment-91</link>
 		<dc:creator><![CDATA[Igor Ovsyannykov]]></dc:creator>
 		<pubDate>Thu, 09 Jul 2015 19:49:00 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1609#comment-91</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1609#comment-91</guid>
 		<description><![CDATA[Great article Minna!
 
 I recently started http://fancycrave.com/ as a side project a few months ago. The site consists of completely free stock photos all taken by me and other talented photographers. It’s basically a collection of images from my travels around South East Asia, North America, and South America (soon). My aim for these photos is to help designers and creative alike. People can use these images for whatever purpose they please.
@@ -41,30 +41,30 @@ Cheers!]]></description>
 	</item>
 	<item>
 		<title>Comment on The Unabridged Guide to Content Promotion Strategy by Minna Wang</title>
-		<link>http://www.qzzr.com/blog/guide-content-promotion-strategy/#comment-82</link>
+		<link>https://www.qzzr.com/blog/guide-content-promotion-strategy/#comment-82</link>
 		<dc:creator><![CDATA[Minna Wang]]></dc:creator>
 		<pubDate>Tue, 23 Jun 2015 15:23:00 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1709#comment-82</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1709#comment-82</guid>
 		<description><![CDATA[Hi Leslie! I&#039;m glad you enjoy the article - let us know how the new ideas work for you!]]></description>
 		<content:encoded><![CDATA[<p>Hi Leslie! I&#8217;m glad you enjoy the article &#8211; let us know how the new ideas work for you!</p>
 ]]></content:encoded>
 	</item>
 	<item>
 		<title>Comment on VIDEO: Take a Tour of Qzzr by lachie</title>
-		<link>http://www.qzzr.com/blog/video-take-tour-qzzr/#comment-80</link>
+		<link>https://www.qzzr.com/blog/video-take-tour-qzzr/#comment-80</link>
 		<dc:creator><![CDATA[lachie]]></dc:creator>
 		<pubDate>Sat, 20 Jun 2015 07:07:00 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1346#comment-80</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1346#comment-80</guid>
 		<description><![CDATA[LAWL]]></description>
 		<content:encoded><![CDATA[<p>LAWL</p>
 ]]></content:encoded>
 	</item>
 	<item>
 		<title>Comment on The Unabridged Guide to Content Promotion Strategy by Leslie L Denning</title>
-		<link>http://www.qzzr.com/blog/guide-content-promotion-strategy/#comment-79</link>
+		<link>https://www.qzzr.com/blog/guide-content-promotion-strategy/#comment-79</link>
 		<dc:creator><![CDATA[Leslie L Denning]]></dc:creator>
 		<pubDate>Thu, 18 Jun 2015 17:38:00 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1709#comment-79</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1709#comment-79</guid>
 		<description><![CDATA[Hi Minna.  This is a power-packed post, and I&#039;m grateful that I found you on Triberr.  I&#039;m always looking for new ways to spread my content around, and you certainly have given me some ideas.  And I&#039;m sure that Kim and Nile will appreciate your mention of Biz Blogging Buzz!
 
 All the best,
@@ -76,60 +76,60 @@ Leslie</p>
 	</item>
 	<item>
 		<title>Comment on 6 Steps to a Sweet Quiz (and How to Make It Viral) [Webinar] by The Yin and Yang of Web Traffic and Engagement [Webinar] - Qzzr</title>
-		<link>http://www.qzzr.com/blog/6-steps-sweet-quiz-make-it-viral/#comment-78</link>
+		<link>https://www.qzzr.com/blog/6-steps-sweet-quiz-make-it-viral/#comment-78</link>
 		<dc:creator><![CDATA[The Yin and Yang of Web Traffic and Engagement [Webinar] - Qzzr]]></dc:creator>
 		<pubDate>Wed, 17 Jun 2015 07:48:17 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1598#comment-78</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1598#comment-78</guid>
 		<description><![CDATA[[&#8230;] As far as successful content marketing, quizzes are at the top of the world right now. Here are a few stats we got from our friends at Buzzsumo: [&#8230;]]]></description>
 		<content:encoded><![CDATA[<p>[&#8230;] As far as successful content marketing, quizzes are at the top of the world right now. Here are a few stats we got from our friends at Buzzsumo: [&#8230;]</p>
 ]]></content:encoded>
 	</item>
 	<item>
 		<title>Comment on Guy Kawasaki’s 12-Part Social Media Strategy Template by The Unabridged Guide to Content Promotion Strategy - Qzzr</title>
-		<link>http://www.qzzr.com/blog/guy-kawasaki-social-media-strategy-template/#comment-77</link>
+		<link>https://www.qzzr.com/blog/guy-kawasaki-social-media-strategy-template/#comment-77</link>
 		<dc:creator><![CDATA[The Unabridged Guide to Content Promotion Strategy - Qzzr]]></dc:creator>
 		<pubDate>Wed, 17 Jun 2015 04:31:28 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1527#comment-77</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1527#comment-77</guid>
 		<description><![CDATA[[&#8230;] thinking though: what if your followers get annoyed? Guy Kawasaki doesn&#8217;t think so—in a recent webinar we did with him, he asserted that the potential for a few lost followers is well worth the [&#8230;]]]></description>
 		<content:encoded><![CDATA[<p>[&#8230;] thinking though: what if your followers get annoyed? Guy Kawasaki doesn&#8217;t think so—in a recent webinar we did with him, he asserted that the potential for a few lost followers is well worth the [&#8230;]</p>
 ]]></content:encoded>
 	</item>
 	<item>
 		<title>Comment on Use This Guide for Global (Quiz) Domination by The Unabridged Guide to Content Promotion Strategy - Qzzr</title>
-		<link>http://www.qzzr.com/blog/guide-for-global-quiz-domination/#comment-76</link>
+		<link>https://www.qzzr.com/blog/guide-for-global-quiz-domination/#comment-76</link>
 		<dc:creator><![CDATA[The Unabridged Guide to Content Promotion Strategy - Qzzr]]></dc:creator>
 		<pubDate>Wed, 17 Jun 2015 04:21:40 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1587#comment-76</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1587#comment-76</guid>
 		<description><![CDATA[[&#8230;] taught you how to create great content, how to find images for it, and even how to use it to take over the world. So what’s the next step? Spreading the word, obviously. You’re smart, you know the [&#8230;]]]></description>
 		<content:encoded><![CDATA[<p>[&#8230;] taught you how to create great content, how to find images for it, and even how to use it to take over the world. So what’s the next step? Spreading the word, obviously. You’re smart, you know the [&#8230;]</p>
 ]]></content:encoded>
 	</item>
 	<item>
 		<title>Comment on The Top 10 Best Websites to Find Copyright-Free Images by The Unabridged Guide to Content Promotion Strategy - Qzzr</title>
-		<link>http://www.qzzr.com/blog/top-10-best-websites-copyright-free-images/#comment-75</link>
+		<link>https://www.qzzr.com/blog/top-10-best-websites-copyright-free-images/#comment-75</link>
 		<dc:creator><![CDATA[The Unabridged Guide to Content Promotion Strategy - Qzzr]]></dc:creator>
 		<pubDate>Tue, 16 Jun 2015 19:09:06 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1609#comment-75</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1609#comment-75</guid>
 		<description><![CDATA[[&#8230;] taught you how to create great content, how to find images for it, and even how to use it to take over the world. So what’s the next step? Spreading the [&#8230;]]]></description>
 		<content:encoded><![CDATA[<p>[&#8230;] taught you how to create great content, how to find images for it, and even how to use it to take over the world. So what’s the next step? Spreading the [&#8230;]</p>
 ]]></content:encoded>
 	</item>
 	<item>
 		<title>Comment on ¡Olé! Now Build Quizzes in Foreign Languages by Maria Makarova</title>
-		<link>http://www.qzzr.com/blog/build-quiz-foreign-language/#comment-74</link>
+		<link>https://www.qzzr.com/blog/build-quiz-foreign-language/#comment-74</link>
 		<dc:creator><![CDATA[Maria Makarova]]></dc:creator>
 		<pubDate>Tue, 16 Jun 2015 15:12:00 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1457#comment-74</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1457#comment-74</guid>
 		<description><![CDATA[OMG you&#039;re awesome, will do right now :)]]></description>
-		<content:encoded><![CDATA[<p>OMG you&#8217;re awesome, will do right now <img src="http://www.qzzr.com/wp-includes/images/smilies/icon_smile.gif" alt=":)" class="wp-smiley" /></p>
+		<content:encoded><![CDATA[<p>OMG you&#8217;re awesome, will do right now <img src="https://www.qzzr.com/wp-includes/images/smilies/icon_smile.gif" alt=":)" class="wp-smiley" /></p>
 ]]></content:encoded>
 	</item>
 	<item>
 		<title>Comment on ¡Olé! Now Build Quizzes in Foreign Languages by creative_destruction</title>
-		<link>http://www.qzzr.com/blog/build-quiz-foreign-language/#comment-73</link>
+		<link>https://www.qzzr.com/blog/build-quiz-foreign-language/#comment-73</link>
 		<dc:creator><![CDATA[creative_destruction]]></dc:creator>
 		<pubDate>Tue, 16 Jun 2015 15:11:00 +0000</pubDate>
-		<guid isPermaLink="false">http://www.qzzr.com/?p=1457#comment-73</guid>
+		<guid isPermaLink="false">https://www.qzzr.com/?p=1457#comment-73</guid>
 		<description><![CDATA[Hi Maria,
 We can definitely help you with duplicating your quiz. Can you send an email to support@qzzr.com letting us know which quiz you want duplicated?
 
