--- a/the-most-simple-and-elegant-quiz-tool/feed/index.html
+++ b/the-most-simple-and-elegant-quiz-tool/feed/index.html
@@ -7,7 +7,7 @@
 	>
 <channel>
 	<title>Comments on: The most simple and elegant quiz tool</title>
-	<atom:link href="http://www.qzzr.com/the-most-simple-and-elegant-quiz-tool/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="https://www.qzzr.com/the-most-simple-and-elegant-quiz-tool/feed/" rel="self" type="application/rss+xml" />
 	<link>http://www.qzzr.com</link>
 	<description></description>
 	<lastBuildDate>Thu, 09 Jul 2015 19:49:00 +0000</lastBuildDate>
