--- a/content-guidelines/index.html
+++ b/content-guidelines/index.html
@@ -71,7 +71,7 @@ try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
 catch(e){window.attachEvent("onload", $buo_f)}
 </script> <style type="text/css">.mc4wp-form input[name="_mc4wp_required_but_not_really"] { display: none !important; }</style>
 <!-- BEGIN Typekit Fonts for WordPress -->
-<script type="text/javascript" src="http://use.typekit.net/fec3qwz.js"></script>
+<script type="text/javascript" src="https://use.typekit.net/fec3qwz.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <!-- END Typekit Fonts for WordPress -->
 
