--- a/stories/publishers/index.html
+++ b/stories/publishers/index.html
@@ -96,7 +96,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 </li>
 <li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-430"><a href="../../pricing">Pricing</a></li>
 <li id="menu-item-431" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-431"><a href="index.html">Stories</a></li>
-<li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-432"><a href="index.html#toggleabout">About</a>
+<li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-432"><a href="#toggleabout">About</a>
 <ul class="sub-menu">
 	<li id="menu-item-1287" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1287"><a href="../../our-team">Our team</a></li>
 	<li id="menu-item-941" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-941"><a href="../../press">Press</a></li>
