--- a/uses/drive-social-traffic/index.html
+++ b/uses/drive-social-traffic/index.html
@@ -95,7 +95,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 </li>
 <li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-430"><a href="../../../pricing/index.html">Pricing</a></li>
 <li id="menu-item-431" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-431"><a href="../../../stories/publishers/index.html">Stories</a></li>
-<li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-432"><a href="index.html#toggleabout">About</a>
+<li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-432"><a href="#toggleabout">About</a>
 <ul class="sub-menu">
   <li id="menu-item-1287" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1287"><a href="../../../our-team/index.html">Our team</a></li>
   <li id="menu-item-941" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-941"><a href="../../../press/index.html">Press</a></li>
