--- a/about/index.html
+++ b/about/index.html
@@ -794,7 +794,7 @@ of quiz tips and strategies.</div>
 </p>
 </div>
 <input type="text" name="_mc4wp_required_but_not_really" value="" /><input type="hidden" name="_mc4wp_timestamp" value="1437503100" /><input type="hidden" name="_mc4wp_form_submit" value="1" /><input type="hidden" name="_mc4wp_form_instance" value="1" /><input type="hidden" name="_mc4wp_form_nonce" value="5061f0970f" /></form></div><!-- / MailChimp for WP Plugin --></div></div>
-<div id="execphp-2" class="widget widget_execphp"><div class="widget-wrap">			<div class="execphpwidget"><script src="http://cdn.optimizely.com/js/3088670038.js"></script>
+<div id="execphp-2" class="widget widget_execphp"><div class="widget-wrap">			<div class="execphpwidget"><script src="https://cdn.optimizely.com/js/3088670038.js"></script>
 <script>
 jQuery('.test-close').click(function(){
   jQuery('.widget_mc4wp_widget').slideUp();
