blog needs a trailing slash

--- a/tour/index.html
+++ b/tour/index.html
@@ -102,7 +102,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 	<li id="menu-item-669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-669"><a href="../contact-us">Contact</a></li>
 </ul>
 </li>
-<li id="menu-item-434" class="last-menu-item menu-item-type-post_type menu-item-object-page menu-item-434"><a href="../blog">Blog</a></li>
+<li id="menu-item-434" class="last-menu-item menu-item-type-post_type menu-item-object-page menu-item-434"><a href="../blog/">Blog</a></li>
 </ul><div class="nav-bar-actions"><div class="nav-bar-actions"><div id="text-2" class="widget widget_text"><div class="widget-wrap">			<div class="textwidget"><div class="nav-bar-actions ">
     <nav class="nav-bar-action">
       <a href="https://app.qzzr.com/account/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
@@ -288,7 +288,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <li id="menu-item-1252" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1252"><a href="../pricing">Pricing</a></li>
 <li id="menu-item-1253" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1253"><a href="../stories/publishers">Stories</a></li>
 <li id="menu-item-1254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1254"><a href="../our-team">About</a></li>
-<li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="../blog">Blog</a></li>
+<li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="../blog/">Blog</a></li>
 </ul></div></div><div id="nav_menu-3" class="widget widget_nav_menu box"><h3>Qzzr for</h3><div class="menu-qzzr-for-container"><ul id="menu-qzzr-for" class="menu"><li id="menu-item-831" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-831"><a href="../uses/publishers">Publishers</a></li>
 <li id="menu-item-832" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-832"><a href="../uses/marketers">Marketers</a></li>
 <li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-833"><a href="../uses/agencies">Agencies</a></li>
