more index.html fixes

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -81,7 +81,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 	dataLayer.push({"pagePostType":"page","pagePostType2":"single-page","pagePostAuthor":"admin"});
 </script></head>
 <body class="page page-id-558 page-template-default header-image content-sidebar"><div id="wrap"><div class="nav-bar"><div class="wrap"><div class="nav-bar-logo logo logo-white"><p><a href="../">Qzzr</a></p></div><!-- end #title-area --><ul id="menu-main_menu" class="top_menu nav nav-bar-tabs"><li id="menu-item-11" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-11"><a href="../tour">Tour</a></li>
-<li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-572"><a href="index.html#toggleShowUses">Uses</a>
+<li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-572"><a href="#toggleShowUses">Uses</a>
 <ul class="sub-menu">
 	<li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="#">Qzzr for:</a></li>
 	<li id="menu-item-473" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-473"><a href="../uses/publishers">Publishers</a></li>
@@ -141,7 +141,7 @@ Lehi, Utah 84043
 <div class="col-4 col-offset-2 col-wxl-6 col-wxl-offset-0 col-wm-12">
 <div class="contact-form-container"><div class="wpcf7" id="wpcf7-f1032-p558-o1" lang="en-US" dir="ltr">
 <div class="screen-reader-response"></div>
-<form name="" action="index.html#wpcf7-f1032-p558-o1" method="post" class="wpcf7-form" novalidate="novalidate">
+<form name="" action="#wpcf7-f1032-p558-o1" method="post" class="wpcf7-form" novalidate="novalidate">
 <div style="display: none;">
 <input type="hidden" name="_wpcf7" value="1032" />
 <input type="hidden" name="_wpcf7_version" value="4.1.1" />
