--- a/press/index.html
+++ b/press/index.html
@@ -81,7 +81,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 	dataLayer.push({"pagePostType":"page","pagePostType2":"single-page","pagePostAuthor":"admin"});
 </script></head>
 <body class="page page-id-919 page-template page-template-template-press page-template-template-press-php header-image content-sidebar"><div id="wrap"><div class="nav-bar"><div class="wrap"><div class="nav-bar-logo logo logo-white"><p><a href="../">Qzzr</a></p></div><!-- end #title-area --><ul id="menu-main_menu" class="top_menu nav nav-bar-tabs"><li id="menu-item-11" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-11"><a href="../tour">Tour</a></li>
-<li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-572"><a href="index.html#toggleShowUses">Uses</a>
+<li id="menu-item-572" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-572"><a href="#toggleShowUses">Uses</a>
 <ul class="sub-menu">
 	<li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="#">Qzzr for:</a></li>
 	<li id="menu-item-473" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-473"><a href="../uses/publishers">Publishers</a></li>
