why won't you die index.html

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -97,7 +97,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <li id="menu-item-431" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-431"><a href="../stories/publishers">Stories</a></li>
 <li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-432"><a href="#toggleabout">About</a>
 <ul class="sub-menu">
-	<li id="menu-item-1287" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-657 current_page_item menu-item-1287"><a href="index.html">Our team</a></li>
+	<li id="menu-item-1287" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-657 current_page_item menu-item-1287"><a href="./">Our team</a></li>
 	<li id="menu-item-941" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-941"><a href="../press">Press</a></li>
 	<li id="menu-item-669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-669"><a href="../contact-us">Contact</a></li>
 </ul>
@@ -188,7 +188,7 @@ By creating the world’s simplest, most beautiful and mobile-friendly quiz crea
 <li id="menu-item-1251" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1251"><a href="../uses/publishers">Uses</a></li>
 <li id="menu-item-1252" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1252"><a href="../pricing">Pricing</a></li>
 <li id="menu-item-1253" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1253"><a href="../stories/publishers">Stories</a></li>
-<li id="menu-item-1254" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-1254"><a href="index.html">About</a></li>
+<li id="menu-item-1254" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-1254"><a href="./">About</a></li>
 <li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="../blog/">Blog</a></li>
 </ul></div></div><div id="nav_menu-3" class="widget widget_nav_menu box"><h3>Qzzr for</h3><div class="menu-qzzr-for-container"><ul id="menu-qzzr-for" class="menu"><li id="menu-item-831" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-831"><a href="../uses/publishers">Publishers</a></li>
 <li id="menu-item-832" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-832"><a href="../uses/marketers">Marketers</a></li>
