--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -396,7 +396,7 @@ Email: <a href="https://www.qzzr.com/cdn-cgi/l/email-protection#54373b242d263d33
 
 <div class="footer_bottom"><div class="down"><div class="widget-area"><div id="execphp-12" class="widget widget_execphp ">			<div class="execphpwidget"><p class="copyright">Copyright 2015 Qzzr</p>
 <ul>
-<li><a href="index.html">Terms of service</a></li>
+<li><a href="./">Terms of service</a></li>
 <li><a href="../privacy-policy">Privacy policy</a></li>
 <li><a href="../content-guidelines">Content guidelines</a></li>
 <li><a href="../sitemap">Sitemap</a></li>
