--- a/uses/present-targeted-offers/index.html
+++ b/uses/present-targeted-offers/index.html
@@ -90,7 +90,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
   <li id="menu-item-977" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-977"><a href="#">Qzzr to:</a></li>
   <li id="menu-item-476" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-476"><a href="../drive-social-traffic">Drive social traffic</a></li>
   <li id="menu-item-477" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-477"><a href="../generate-qualified-leads">Generate qualified leads</a></li>
-  <li id="menu-item-478" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-478"><a href="index.html">Present targeted offers</a></li>
+  <li id="menu-item-478" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-478"><a href="./">Present targeted offers</a></li>
 </ul>
 </li>
 <li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-430"><a href="../../../pricing">Pricing</a></li>
@@ -280,7 +280,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-833"><a href="../agencies">Agencies</a></li>
 </ul></div></div><div id="nav_menu-4" class="widget widget_nav_menu box"><h3>Qzzr to</h3><div class="menu-qzzr-to-container"><ul id="menu-qzzr-to" class="menu"><li id="menu-item-828" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-828"><a href="../drive-social-traffic">Drive social traffic</a></li>
 <li id="menu-item-830" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-830"><a href="../generate-qualified-leads">Generate qualified leads</a></li>
-<li id="menu-item-829" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-829"><a href="index.html">Present targeted offers</a></li>
+<li id="menu-item-829" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-829"><a href="./">Present targeted offers</a></li>
 </ul></div></div><div id="nav_menu-5" class="widget widget_nav_menu box"><h3>Useful Stuff</h3><div class="menu-useful_stuff-container"><ul id="menu-useful_stuff" class="menu"><li id="menu-item-405" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-405"><a href="../../../commonly-asked-questions">Commonly asked questions</a></li>
 <li id="menu-item-406" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-406"><a href="http://go.qzzr.com/ebook-are-you-a-qwizard/">Ebook: Are You a Qwizard?</a></li>
 <li id="menu-item-407" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-407"><a href="../../killer-techniques-behind-world-class-quizzes">Webinar: Killer Techniques of World-Class Quizzes</a></li>
