--- a/stories/marketers/index.html
+++ b/stories/marketers/index.html
@@ -129,7 +129,7 @@ jQuery(function(){
 
 	<nav class="tabs tabs-plain">
 			  <a href="../publishers" class=" tabs-link">Publishers</a>
-			  <a href="index.html" class=" tabs-link">Marketers</a>
+			  <a href="./" class=" tabs-link">Marketers</a>
 			  <a href="../agencies" class=" tabs-link">Agencies</a>
 		</nav>
 	<div class="tabs-logos">
@@ -325,8 +325,8 @@ Other quizzes include:
 
             <div style="position:relative">
 
-                <a id="prev-link" class="cycle-prev flex-prev" href="index.html"></a>
-                <a id="next-link" class="cycle-next flex-next" href="index.html"></a>
+                <a id="prev-link" class="cycle-prev flex-prev" href="./"></a>
+                <a id="next-link" class="cycle-next flex-next" href="./"></a>
 
             <div id="testimonial-carousel" class="slides">
                                     <div class="slide media media-testimonial-plain" style="padding: 0; margin: 0">
