--- a/uses/agencies/index.html
+++ b/uses/agencies/index.html
@@ -12,7 +12,7 @@
 <!-- End Google Tag Manager for WordPress by DuracellTomi -->
 <!-- This site is optimized with the Yoast WordPress SEO plugin v1.7.4 - https://yoast.com/wordpress/plugins/seo/ -->
 <meta name="description" content="See how agencies can use Qzzr - the simplest, most beautiful quizzing tool out there - to drive more social traffic."/>
-<link rel="canonical" href="index.html" />
+<link rel="canonical" href="./" />
 <link rel="next" href="page/2" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="object" />
@@ -83,7 +83,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
   <li id="menu-item-861" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-861"><a href="#">Qzzr for:</a></li>
   <li id="menu-item-473" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-473"><a href="../publishers">Publishers</a></li>
   <li id="menu-item-474" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-474"><a href="../marketers">Marketers</a></li>
-  <li id="menu-item-475" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-475"><a href="index.html">Agencies</a></li>
+  <li id="menu-item-475" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-475"><a href="./">Agencies</a></li>
   <li id="menu-item-977" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-977"><a href="#">Qzzr to:</a></li>
   <li id="menu-item-476" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-476"><a href="../drive-social-traffic">Drive social traffic</a></li>
   <li id="menu-item-477" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-477"><a href="../generate-qualified-leads">Generate qualified leads</a></li>
@@ -258,7 +258,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="../..">Blog</a></li>
 </ul></div></div><div id="nav_menu-3" class="widget widget_nav_menu box"><h3>Qzzr for</h3><div class="menu-qzzr-for-container"><ul id="menu-qzzr-for" class="menu"><li id="menu-item-831" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-831"><a href="../publishers">Publishers</a></li>
 <li id="menu-item-832" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-832"><a href="../marketers">Marketers</a></li>
-<li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-833"><a href="index.html">Agencies</a></li>
+<li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-833"><a href="./">Agencies</a></li>
 </ul></div></div><div id="nav_menu-4" class="widget widget_nav_menu box"><h3>Qzzr to</h3><div class="menu-qzzr-to-container"><ul id="menu-qzzr-to" class="menu"><li id="menu-item-828" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-828"><a href="../drive-social-traffic">Drive social traffic</a></li>
 <li id="menu-item-830" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-830"><a href="../generate-qualified-leads">Generate qualified leads</a></li>
 <li id="menu-item-829" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-829"><a href="../present-targeted-offers">Present targeted offers</a></li>
