--- a/uses/publishers/index.html
+++ b/uses/publishers/index.html
@@ -18,7 +18,7 @@
 <meta property="og:type" content="object" />
 <meta property="og:title" content="Create Beautiful Quizzes: Free Online Quiz Maker - Qzzr" />
 <meta property="og:description" content="See how publishers can use Qzzr - the simplest, most beautiful quizzing tool out there - to drive more social traffic." />
-<meta property="og:url" content="http://www.qzzr.com/blog/uses/publishers/" />
+<meta property="og:url" content="https://www.qzzr.com/blog/uses/publishers/" />
 <meta property="og:site_name" content="Qzzr" />
 <!-- / Yoast WordPress SEO plugin. -->
 
