--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,7 +8,7 @@
 <channel>
 	<title>Comments for Qzzr</title>
 	<atom:link href="https://www.qzzr.com/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://www.qzzr.com</link>
+	<link>https://www.qzzr.com</link>
 	<description></description>
 	<lastBuildDate>Thu, 09 Jul 2015 19:49:00 +0000</lastBuildDate>
 	<sy:updatePeriod>hourly</sy:updatePeriod>
