--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -12,7 +12,7 @@
 <!-- End Google Tag Manager for WordPress by DuracellTomi -->
 <!-- This site is optimized with the Yoast WordPress SEO plugin v1.7.4 - https://yoast.com/wordpress/plugins/seo/ -->
 <meta name="description" content="Qzzr is a simple online quiz tool that allows you to quickly create beautiful quizzes, post them anywhere on the web, view on any device, and track results."/>
-<link rel="canonical" href="http://www.qzzr.com" />
+<link rel="canonical" href="https://www.qzzr.com" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Free Online Quiz Tool - Easily Create Online Quizzes | Qzzr" />
