--- a/stories/marketers/feed/index.html
+++ b/stories/marketers/feed/index.html
@@ -8,7 +8,7 @@
 <channel>
 	<title>Comments on: Marketers</title>
 	<atom:link href="https://www.qzzr.com/stories/marketers/feed/" rel="self" type="application/rss+xml" />
-	<link>http://www.qzzr.com</link>
+	<link>https://www.qzzr.com</link>
 	<description></description>
 	<lastBuildDate>Thu, 09 Jul 2015 19:49:00 +0000</lastBuildDate>
 	<sy:updatePeriod>hourly</sy:updatePeriod>
