fix /contact-us link

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -206,7 +206,7 @@ By creating the world’s simplest, most beautiful and mobile-friendly quiz crea
 </ul></div></div><div id="nav_menu-6" class="widget widget_nav_menu box"><h3>Need help?</h3><div class="menu-need_help-container"><ul id="menu-need_help" class="menu"><li id="menu-item-412" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-412"><a href="http://go.qzzr.com/request-your-demo/">Request a demo</a></li>
 <li id="menu-item-413" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-413"><a href="http://go.qzzr.com/custom-quiz/">Custom quiz creation</a></li>
 <li id="menu-item-414" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-414"><a href="http://go.qzzr.com/campaign-management/">Campaign management</a></li>
-<li id="menu-item-415" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-415"><a href="http://new.qzzr.com/contact-us/">Contact us</a></li>
+<li id="menu-item-415" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-415"><a href="/contact-us">Contact us</a></li>
 </ul></div></div></div>
 
 
