--- a/content-guidelines/index.html
+++ b/content-guidelines/index.html
@@ -279,7 +279,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <ul>
 <li><a href="../terms-of-service">Terms of service</a></li>
 <li><a href="../privacy-policy">Privacy policy</a></li>
-<li><a href="./">Content guidelines</a></li>
+<li><a href=".">Content guidelines</a></li>
 <li><a href="../sitemap">Sitemap</a></li>
 </ul>
 </div>
