--- a/stories/publishers/index.html
+++ b/stories/publishers/index.html
@@ -95,7 +95,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 </ul>
 </li>
 <li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-430"><a href="../../pricing">Pricing</a></li>
-<li id="menu-item-431" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-431"><a href="./">Stories</a></li>
+<li id="menu-item-431" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-431"><a href=".">Stories</a></li>
 <li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-432"><a href="#toggleabout">About</a>
 <ul class="sub-menu">
 	<li id="menu-item-1287" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1287"><a href="../../our-team">Our team</a></li>
@@ -130,7 +130,7 @@ jQuery(function(){
 	<h2 class="stories-title float-left h4 b h mtn mbn purple-color">Stories</h2>
 
 	<nav class="tabs tabs-plain">
-			  <a href="./" class=" tabs-link">Publishers</a>
+			  <a href="." class=" tabs-link">Publishers</a>
 			  <a href="../marketers" class=" tabs-link">Marketers</a>
 			  <a href="../agencies" class=" tabs-link">Agencies</a>
 		</nav>
@@ -327,8 +327,8 @@ Other quizzes include:
 
             <div style="position:relative">
 
-                <a id="prev-link" class="cycle-prev flex-prev" href="./"></a>
-                <a id="next-link" class="cycle-next flex-next" href="./"></a>
+                <a id="prev-link" class="cycle-prev flex-prev" href="."></a>
+                <a id="next-link" class="cycle-next flex-next" href="."></a>
 
             <div id="testimonial-carousel" class="slides">
                                     <div class="slide media media-testimonial-plain" style="padding: 0; margin: 0">
@@ -523,7 +523,7 @@ Other quizzes include:
 <div class="footer_top"><div id="nav_menu-2" class="widget widget_nav_menu box"><h3>Overview</h3><div class="menu-footer-overview-container"><ul id="menu-footer-overview" class="menu"><li id="menu-item-1250" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1250"><a href="../../tour">Tour</a></li>
 <li id="menu-item-1251" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1251"><a href="../../uses/publishers">Uses</a></li>
 <li id="menu-item-1252" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1252"><a href="../../pricing">Pricing</a></li>
-<li id="menu-item-1253" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-1253"><a href="./">Stories</a></li>
+<li id="menu-item-1253" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-1253"><a href=".">Stories</a></li>
 <li id="menu-item-1254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1254"><a href="../../our-team">About</a></li>
 <li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="../../blog/">Blog</a></li>
 </ul></div></div><div id="nav_menu-3" class="widget widget_nav_menu box"><h3>Qzzr for</h3><div class="menu-qzzr-for-container"><ul id="menu-qzzr-for" class="menu"><li id="menu-item-831" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-831"><a href="../../uses/publishers">Publishers</a></li>
