--- a/uses/generate-qualified-leads/index.html
+++ b/uses/generate-qualified-leads/index.html
@@ -89,7 +89,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
   <li id="menu-item-475" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-475"><a href="../agencies">Agencies</a></li>
   <li id="menu-item-977" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-977"><a href="#">Qzzr to:</a></li>
   <li id="menu-item-476" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-476"><a href="../drive-social-traffic">Drive social traffic</a></li>
-  <li id="menu-item-477" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-477"><a href="./">Generate qualified leads</a></li>
+  <li id="menu-item-477" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-477"><a href=".">Generate qualified leads</a></li>
   <li id="menu-item-478" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-478"><a href="../present-targeted-offers">Present targeted offers</a></li>
 </ul>
 </li>
@@ -247,7 +247,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 <li id="menu-item-832" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-832"><a href="../marketers">Marketers</a></li>
 <li id="menu-item-833" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-833"><a href="../agencies">Agencies</a></li>
 </ul></div></div><div id="nav_menu-4" class="widget widget_nav_menu box"><h3>Qzzr to</h3><div class="menu-qzzr-to-container"><ul id="menu-qzzr-to" class="menu"><li id="menu-item-828" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-828"><a href="../drive-social-traffic">Drive social traffic</a></li>
-<li id="menu-item-830" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-830"><a href="./">Generate qualified leads</a></li>
+<li id="menu-item-830" class="menu-item menu-item-type-taxonomy menu-item-object-uses current-menu-item menu-item-830"><a href=".">Generate qualified leads</a></li>
 <li id="menu-item-829" class="last-menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-829"><a href="../present-targeted-offers">Present targeted offers</a></li>
 </ul></div></div><div id="nav_menu-5" class="widget widget_nav_menu box"><h3>Useful Stuff</h3><div class="menu-useful_stuff-container"><ul id="menu-useful_stuff" class="menu"><li id="menu-item-405" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-405"><a href="../../../commonly-asked-questions">Commonly asked questions</a></li>
 <li id="menu-item-406" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-406"><a href="http://go.qzzr.com/ebook-are-you-a-qwizard/">Ebook: Are You a Qwizard?</a></li>
