more relative path fixes

--- a/content-guidelines/index.html
+++ b/content-guidelines/index.html
@@ -270,7 +270,7 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 <ul>
 <li><a href="/terms-of-service">Terms of service</a></li>
 <li><a href="/privacy-policy">Privacy policy</a></li>
-<li><a href=".">Content guidelines</a></li>
+<li><a href="/content-guidelines">Content guidelines</a></li>
 <li><a href="/sitemap">Sitemap</a></li>
 </ul>
 </div>
