--- a/pricing/index.html
+++ b/pricing/index.html
@@ -84,7 +84,7 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 	<li id="menu-item-478" class="menu-item menu-item-type-taxonomy menu-item-object-uses menu-item-478"><a href="/uses/present-targeted-offers">Present targeted offers</a></li>
 </ul>
 </li>
-<li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-6 current_page_item menu-item-430"><a href=".">Pricing</a></li>
+<li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-6 current_page_item menu-item-430"><a href="/pricing">Pricing</a></li>
 <li id="menu-item-431" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-431"><a href="/stories/publishers">Stories</a></li>
 <li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-432"><a href="#toggleabout">About</a>
 <ul class="sub-menu">
@@ -935,7 +935,7 @@ just let us know and we will make it right.</p>
 
 <div class="footer_top"><div id="nav_menu-2" class="widget widget_nav_menu box"><h3>Overview</h3><div class="menu-footer-overview-container"><ul id="menu-footer-overview" class="menu"><li id="menu-item-1250" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1250"><a href="/tour">Tour</a></li>
 <li id="menu-item-1251" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1251"><a href="/uses/publishers">Uses</a></li>
-<li id="menu-item-1252" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-1252"><a href=".">Pricing</a></li>
+<li id="menu-item-1252" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-1252"><a href="/pricing">Pricing</a></li>
 <li id="menu-item-1253" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1253"><a href="/stories/publishers">Stories</a></li>
 <li id="menu-item-1254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1254"><a href="/our-team">About</a></li>
 <li id="menu-item-1255" class="last-menu-item menu-item-type-custom menu-item-object-custom menu-item-1255"><a href="/blog/">Blog</a></li>
