--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -90,7 +90,7 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 <ul class="sub-menu">
 	<li id="menu-item-1287" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1287"><a href="/our-team">Our team</a></li>
 	<li id="menu-item-941" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-941"><a href="/press">Press</a></li>
-	<li id="menu-item-669" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-558 current_page_item menu-item-669"><a href=".">Contact</a></li>
+	<li id="menu-item-669" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-558 current_page_item menu-item-669"><a href="/contact-us">Contact</a></li>
 </ul>
 </li>
 <li id="menu-item-434" class="last-menu-item menu-item-type-post_type menu-item-object-page menu-item-434"><a href="/blog/">Blog</a></li>
