--- a/press/index.html
+++ b/press/index.html
@@ -89,7 +89,7 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 <li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-432"><a href="#toggleabout">About</a>
 <ul class="sub-menu">
 	<li id="menu-item-1287" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1287"><a href="/our-team">Our team</a></li>
-	<li id="menu-item-941" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-919 current_page_item menu-item-941"><a href=".">Press</a></li>
+	<li id="menu-item-941" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-919 current_page_item menu-item-941"><a href="/press">Press</a></li>
 	<li id="menu-item-669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-669"><a href="/contact-us">Contact</a></li>
 </ul>
 </li>
