--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -306,7 +306,7 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 <div class="footer_bottom"><div class="down"><div class="widget-area"><div id="execphp-12" class="widget widget_execphp ">			<div class="execphpwidget"><p class="copyright">Copyright 2015 Qzzr</p>
 <ul>
 <li><a href="/terms-of-service">Terms of service</a></li>
-<li><a href=".">Privacy policy</a></li>
+<li><a href="/privacy-policy">Privacy policy</a></li>
 <li><a href="/content-guidelines">Content guidelines</a></li>
 <li><a href="/sitemap">Sitemap</a></li>
 </ul>
