fix loader script

--- a/stories/agencies/index.html
+++ b/stories/agencies/index.html
@@ -151,7 +151,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="8357"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
@@ -178,7 +178,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="22696"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
@@ -213,7 +213,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="12988"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
@@ -248,7 +248,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="27946"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
@@ -283,7 +283,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="5146"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
