--- a/stories/publishers/index.html
+++ b/stories/publishers/index.html
@@ -153,7 +153,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="8357"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
@@ -180,7 +180,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="22696"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
@@ -215,7 +215,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="12988"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
@@ -250,7 +250,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="27946"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
@@ -285,7 +285,7 @@ Other quizzes include:
 <div class="col-8 col-offset-2 col-wl-12 col-wl-offset-0 mt5">
 <h4 class="h3 text-center">Take the quiz</h4>
 <div class="quizz-container" data-width="100%" data-height="auto" data-quiz="5146"></div>
-<script src="http://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
+<script src="https://dcc4iyjchzom0.cloudfront.net/widget/loader.js" async=""></script>
 </div>
 
 <div class="col-6 col-wxl-8 col-wxl-offset-2 col-wm-12 col-wm-offset-0">
