more link fixes

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -724,8 +724,8 @@ just let us know and we will make it right.</p>
 
             <div style="position:relative">
 
-                <a id="prev-link" class="cycle-prev flex-prev" href="."></a>
-                <a id="next-link" class="cycle-next flex-next" href="."></a>
+                <a id="prev-link" class="cycle-prev flex-prev" href="/pricing"></a>
+                <a id="next-link" class="cycle-next flex-next" href="/pricing"></a>
 
             <div id="testimonial-carousel" class="slides">
                                     <div class="slide media media-testimonial-plain" style="padding: 0; margin: 0">
